Update requirements and add new packages
Updated python-telegram-bot version and added new dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-python-telegram-bot==21.5
-requests
-feedparser
+python-telegram-bot==21.6
 apscheduler
+feedparser
+requests
+python-dotenv
+aiogram
+twelve-data
+sqlalchemy
+openai
+python-dateutil
+asyncpg
+aiosqlite
+python-multipart
+pydantic
+python-telegram-bot[asyncio]==21.6
+telebot
